# -

./: CMakeLists.txt  README.md
include/: ClassManager.h  DataManager.h  Draw.h  InstituteManager.h  Menu.h  Profession.h  Students.h  SuperAdmin.h
libgraph/include/: graphics.h  initial.h
libgraph/src/: graphics.c  imgui.c  initial.c
src/: ClassManager.c  DataManager.c  Draw.c  InstituteManager.c  Menu.c  Profession.c  Students.c  SuperAdmin.c  main.c
